# short-url

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/agents/: requirement-engineer.agent.md  test-runner.agent.md
.github/skills/add-requirement-template/: SKILL.md
.github/skills/run-tests/: SKILL.md
.github/skills/run-tests/scripts/: run-tests.ps1
.github/workflows/: ci.yml
docs/: approach.md  evaluation.md
docs/examples/: ambiguous.md  brownfield.md  greenfield.md
examples/url_shortener/: README.md  requirement.txt
examples/url_shortener/app/: __init__.py  analytics.py  cache.py  main.py  schemas.py  service.py  shortener.py  storage.py
examples/url_shortener/tests/: conftest.py  test_analytics.py  test_api.py  test_shortener.py  test_storage.py
scripts/: run_demo.ps1  run_demo.sh
src/ai_eng/: __init__.py  __main__.py  ai_provider.py  analyzer.py  decomposer.py  executor.py  knowledge.py  models.py  orchestrator.py  output.py  validator.py
tests/: test_analyzer.py  test_decomposer.py  test_orchestrator.py  test_validator.py
