[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-assisted-engineering"
version = "0.1.0"
description = "An engineer-led, AI-assisted software engineering prototype that turns a requirement into validated, production-quality outputs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AI-Assisted Engineering Prototype" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]
ai = [
    # Optional: only needed when using a live AI provider instead of the
    # default deterministic offline provider.
    "openai>=1.30",
]

[project.scripts]
ai-eng = "ai_eng.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests", "examples/url_shortener/tests"]
pythonpath = ["src", "examples/url_shortener"]

[tool.coverage.run]
branch = true
source = ["ai_eng", "app"]
